[gd_scene load_steps=4 format=3 uid="uid://de4hjdhgc21p4"]

[ext_resource type="Script" path="res://source/messages/message_box.gd" id="1_hf0hy"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7llif"]

[sub_resource type="CanvasTexture" id="CanvasTexture_w55px"]

[node name="MessageBox" type="Node2D"]
script = ExtResource("1_hf0hy")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CharacterTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 6.0

[node name="GFX" type="Node2D" parent="."]
z_index = 100
scale = Vector2(0.85, 0.85)

[node name="OuterBorders" type="Sprite2D" parent="GFX"]
scale = Vector2(360, 155)
texture = SubResource("CanvasTexture_7llif")

[node name="InnerBorders" type="Sprite2D" parent="GFX"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(350, 145.373)
texture = SubResource("CanvasTexture_w55px")

[node name="MessageNode" type="Node2D" parent="GFX"]
position = Vector2(-155, -50)

[node name="Message" type="Label" parent="GFX/MessageNode"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="timeout" from="CharacterTimer" to="." method="_on_character_timer_timeout"]
